@@ -72,6 +72,7 @@ static c_lang_t const C_LANG[] = {
   { "C99",     LANG_C_99    },
   { "C11",     LANG_C_11    },
   { "C18",     LANG_C_18    },
+  { "C2X",     LANG_C_2X    },
   { "C++",     LANG_CPP_NEW },
   { "C++98",   LANG_CPP_98  },
   { "C++03",   LANG_CPP_03  },
@@ -114,6 +115,7 @@ char const* c_lang_name( c_lang_id_t lang_id ) {
     case LANG_C_99_EMB: return "C99 (with Embedded C extensions)";
     case LANG_C_11    : return "C11";
     case LANG_C_18    : return "C18";
+    case LANG_C_2X    : return "C2X";
     case LANG_CPP_98  : return "C++98";
     case LANG_CPP_03  : return "C++03";
     case LANG_CPP_11  : return "C++11";
